--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: php
 php:
-  - '5.4'
-  - '5.5'
   - '5.6'
+before_install:
+  - composer self-update
 before_script:
   - composer install
 script: phpunit --configuration phpunit.xml --coverage-text
